--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "dangerous-disk",
+  "name": "ad-astro-blog",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
