--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "ad-astro-blog",
-  "type": "module",
   "version": "0.0.1",
+  "dependencies": {
+    "@astrojs/tailwind": "^5.0.0",
+    "@fontsource-variable/rubik": "^5.0.14",
+    "astro": "^3.1.2",
+    "tailwindcss": "^3.0.24"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
   },
-  "dependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "@fontsource-variable/rubik": "^5.0.14",
-    "astro": "^3.1.2",
-    "tailwindcss": "^3.0.24"
+  "type": "module",
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
